syntax = "proto3";

package elegant_swirles.camera.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "elegant_swirles/camera;camera";

service Camera {
  rpc GetCameraMetrics(google.protobuf.Empty) returns (stream CameraMetrics) {}
}

message CameraMetrics {
  uint32 CountPeople = 1;
  google.protobuf.Timestamp created = 2;
}